--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,5 +6,8 @@ sky:
     database: sky_take_out
     username: root
     password: 123456
-
+  redis:
+    port: 6379
+    host: localhost
+    database: 0
 
