商品浏览微信小程序

--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -10,4 +10,7 @@ sky:
     port: 6379
     host: localhost
     database: 0
+  wechat:
+    appid: wx3ee67da5b3de65f9
+    secret: f4c55e67ee1a242d093fa9eee668b557
 
